overflow bug fixed

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   background: url("./images/bg-pattern.png"),
     -webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
   font-family: "Muli", sans-serif;
+  overflow: hidden;
 }
 
 h,
@@ -210,10 +211,6 @@ i.description-icon {
 }
 
 @media all and (max-width: 768px) {
-  html,
-  body {
-    overflow-x: hidden;
-  }
   .phone-image > img.screen-content {
     left: 14.5rem;
   }
